3.3.4
Two more layouts, 2clw & 2crw  2 column wide at 980px instead of 780px; larger posting area
CSS tweaks to the featured image of regular posts

3.3.3
Toggle option now available to disable jetpacks infinite scroll and use the easel pagination
modified the author.php with nopaging = true being sent to the is_author main query to stop the annoying jetpack infinite scrolling to abuse that page
adjusted CSS in the footer for the footer menu
added the content-link post format type
added additional .breadcrumb wrapper under the #breadcrumb-wrapper so it can be spaced, floated or centered as needed.


3.3.2
Removed the single-comic.php file, wasn't supposed to be there, causing issues with post types displaying in content files

3.3.1
Uncommented a needed function in the functions.php
fixed the css for the image in the post info image


3.3
Removed extra code inside the index.php file and fixed the pre_get_posts in the functions.php to associate the MAIN QUERY ONLY $query-> properly for posts per page.
removed the use of the function easel_display_post() - now using get_template_part('content' ref: see format types (content.php)
added format types, which you can 'skin' the post area for the format type that you want to look differently for that particular format
rewrote the functions.php to stay with the guidelines of the theme review team as well as implement for post formats
revamped how the featured image thumbnail for regular posts displays
revamped the display of the .post-info area of posts
added opengraph information for making a thumbnail for youtube video's 
css element #column is now #content to stay correctly in tune with other themes




3.2.1 
Sidebar fix for left and right sidebars using easel_get_sidebar

3.2
Introducing Flexible Headers, no longer need to set a specific height and width